SUBDIRS= @moduledirs@

DIST_SUBDIRS = \
	bindbackend \
	geobackend \
	geoipbackend \
	gmysqlbackend \
	goraclebackend \
	gpgsqlbackend \
	gsqlite3backend \
	ldapbackend \
	lmdbbackend \
	luabackend \
	mydnsbackend \
    nictoolbackend \
	opendbxbackend \
	oraclebackend \
	pipebackend \
	randombackend \
	remotebackend \
	tinydnsbackend
